# PlaylistGenerator

./: Dockerfile  README.md  docker-compose.yml  genius_data.py  pyproject.toml
Data Retreival/: genius_data.py  spotify_data.py
DataCollection/: dataPreprocess.py
ModelBuilding/: model.py  sentiment.py
ReinforcementLearning/: enviornment.py  training.py
junk/: fixed.csv
junk/ModelOutputs/: global_best.json  global_best2.json  train_loss.json  train_loss2.json
junk/ModelOutputs/policy/: fingerprint.pb  saved_model.pb
junk/ModelOutputs/policy/variables/: variables.data-00000-of-00001  variables.index
junk/ModelOutputs1/policy/: policy_specs.pbtxt
junk/ModelOutputs1/policy/variables/: variables.data-00000-of-00001  variables.index
modelBuilding/: .cache
outputs/ModelOutputs/: global_best.json  train_loss.json
outputs/ModelOutputs/policy/: fingerprint.pb  policy_specs.pbtxt  saved_model.pb
outputs/ModelOutputs/policy/variables/: variables.index  (+1 more)
playlistgenerator/: frontend_app.py
playlistgenerator/DataCollection/: dataPreprocess.py
playlistgenerator/DataRetreival/: genius_data.py  spotify_data.py
playlistgenerator/Datasets/: spotify_recommendations.csv  user_data.csv
playlistgenerator/FetchSpotify/: Preprocess.py  data.py  model.py
playlistgenerator/Frontend/: visualizer.py
playlistgenerator/ModelBuildingKaggle/: model.py  sentiment.py
playlistgenerator/ReinforcementLearning/: constants.py  environment.py  training.py  utils.py
playlistgenerator/modelBuilding/: Preprocess.py  data.py  model.py  user_data.csv
src/: data.py  model.py
